--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <title>Signals Vs Subjects Vs NgRx</title>
+    <meta
+      name="description"
+      content="Explore a comprehensive comparison between Angular Signals, RxJS Subjects, and NgRx for state and data management. Learn their pros, cons, and best use cases."
+    />
+    <meta name="keywords" content="Angular state management, Angular Signals, RxJS Subjects, NgRx, Angular data flow, Angular comparison" />
+    <meta name="author" content="Juan Manuel Muñoz González" />
     <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="assets/images/ico.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
   </head>
   <body>
