--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     />
     <meta name="keywords" content="Angular state management, Angular Signals, RxJS Subjects, NgRx, Angular data flow, Angular comparison" />
     <meta name="author" content="Juan Manuel Muñoz González" />
+    <meta name="google-site-verification" content="WG9TTQ9SrU8UnFkQdWFqDpCfCVQ6iBr85tEyEc2RK4A" />
     <base href="/" />
     <link rel="icon" type="image/x-icon" href="assets/images/ico.png" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
