--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <meta name="author" content="Juan Manuel Muñoz González" />
     <meta name="google-site-verification" content="WG9TTQ9SrU8UnFkQdWFqDpCfCVQ6iBr85tEyEc2RK4A" />
     <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="assets/images/ico.png" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
   </head>
